[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main_Menu/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Images/shower.png" type="Texture" id=2]
[ext_resource path="res://Images/curtain.png" type="Texture" id=3]
[ext_resource path="res://Images/name.png" type="Texture" id=4]

[node name="Main_Menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="shower" type="Sprite" parent="." index="0"]

position = Vector2( 640, 320 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="curtain" type="Sprite" parent="." index="1"]

position = Vector2( 640, 320 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="Sprite" parent="." index="2"]

position = Vector2( 640, 320 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="start_new_game" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 440.0
margin_right = 708.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="to_continue" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 480.0
margin_right = 708.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="scores" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 520.0
margin_right = 708.0
margin_bottom = 552.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="quit" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 560.0
margin_right = 708.0
margin_bottom = 592.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[connection signal="pressed" from="start_new_game" to="." method="_on_start_new_game_pressed"]

[connection signal="pressed" from="to_continue" to="." method="_on_to_continue_pressed"]

[connection signal="pressed" from="scores" to="." method="_on_scores_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


